src/objects/inscor__Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_Task__c</fullName>
        <description>This will put value &quot;1&quot; on the box if the person&apos;s logged in equals to user assigned to request.</description>
        <formula>If($User.Id = inscor__Assigned_To__c, 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Task</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reply_Text__c</fullName>
        <label>Reply Text</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__CAGE_Code__c</fullName>
        <label>CAGE Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Quote Line</label>
        <referenceTo>inscor__Customer_Quote_Line__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Quote</label>
        <referenceTo>inscor__Customer_Quote__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Customer__c</fullName>
        <formula>IF(  ISBLANK(inscor__Customer_Quote__c), IF(  ISBLANK(inscor__Sales_Order__c), NULL ,   inscor__Sales_Order__r.inscor__Customer__r.Name ) ,   inscor__Customer_Quote__r.inscor__Customer__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Type__c</fullName>
        <formula>IF(  ISBLANK(inscor__Customer_Quote_Line__c), IF(  ISBLANK(inscor__Sales_Order_Line__c), NULL ,  TEXT(inscor__Sales_Order_Line__r.inscor__Order_Type__c) ) ,   TEXT(inscor__Customer_Quote_Line__r.inscor__Quote_Type__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Line__c</fullName>
        <formula>IF(  ISBLANK(inscor__Customer_Quote_Line__c), IF(  ISBLANK(inscor__Sales_Order_Line__c), NULL ,  inscor__Sales_Order_Line__r.inscor__Line_Number__c ) ,  inscor__Customer_Quote_Line__r.inscor__Line_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__NSN__c</fullName>
        <label>NSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Needed_By__c</fullName>
        <label>Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reply By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reply Condition</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Requests (Reply Condition)</relationshipLabel>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Date__c</fullName>
        <label>Reply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Delivery_Days__c</fullName>
        <label>Reply Delivery (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Line_Type__c</fullName>
        <label>Reply Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outright</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Rental / Lease</fullName>
                </value>
                <value>
                    <fullName>Non Stock</fullName>
                </value>
                <value>
                    <fullName>No Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Reply_Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reply Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Requests (Reply Part Number)</relationshipLabel>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Price__c</fullName>
        <label>Reply Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Quantity__c</fullName>
        <label>Reply Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Tag__c</fullName>
        <label>Reply Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Trace__c</fullName>
        <label>Reply Trace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Validity_Days__c</fullName>
        <label>Reply Validity (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Reply_Warranty__c</fullName>
        <label>Reply Warranty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Request_Type__c</fullName>
        <label>Request Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                    <default>true</default>
                    <label>Purchase</label>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Credit Limit Request</fullName>
                </value>
                <value>
                    <fullName>Credit Limit Increase</fullName>
                </value>
                <value>
                    <fullName>Account Approval</fullName>
                </value>
                <value>
                    <fullName>Expedite SO</fullName>
                </value>
                <value>
                    <fullName>Expedite PO</fullName>
                </value>
                <value>
                    <fullName>Help sourcing PN</fullName>
                </value>
                <value>
                    <fullName>Pricing a Stock PN</fullName>
                </value>
                <value>
                    <fullName>Market Research for PN</fullName>
                </value>
                <value>
                    <fullName>Negotiate better pricing with Vendor</fullName>
                </value>
                <value>
                    <fullName>Advise Alternate PN&apos;s</fullName>
                </value>
                <value>
                    <fullName>Buy to Stock</fullName>
                </value>
                <value>
                    <fullName>Order Cancellation</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Send for Repair from Stock</fullName>
                </value>
                <value>
                    <fullName>Send for Repair for Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>My_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Request_Type__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Customer__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Open Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_Assigned_to_Me</fullName>
        <columns>NAME</columns>
        <columns>inscor__Request_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Line_Type__c</columns>
        <columns>inscor__Needed_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>inscor__Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Task__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>inscor__Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Open Requests Assigned to Me</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_JB</fullName>
        <columns>NAME</columns>
        <columns>inscor__Request_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Line_Type__c</columns>
        <columns>inscor__Needed_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>inscor__Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Status__c</field>
            <operation>equals</operation>
            <value>Requested,In Progress</value>
        </filters>
        <filters>
            <field>inscor__Assigned_To__c</field>
            <operation>contains</operation>
            <value>Jordan</value>
        </filters>
        <label>Open Requests (JB)</label>
        <sharedTo>
            <role>Expeditor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Customer_Quote_Line__c</columns>
        <columns>inscor__Request_Type__c</columns>
        <columns>inscor__Sales_Order_Line__c</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__New_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Line_Type__c</columns>
        <columns>inscor__Needed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>New Requests</label>
    </listViews>
    <listViews>
        <fullName>inscor__Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>inscor__Request_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Line_Type__c</columns>
        <columns>inscor__Needed_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>inscor__Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Status__c</field>
            <operation>equals</operation>
            <value>Requested,In Progress</value>
        </filters>
        <label>Open Requests</label>
    </listViews>
    <listViews>
        <fullName>inscor__Purchasing_Requests</fullName>
        <columns>NAME</columns>
        <columns>inscor__Customer_Quote_Line__c</columns>
        <columns>inscor__Sales_Order_Line__c</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Request_Type__c</field>
            <operation>equals</operation>
            <value>Purchase</value>
        </filters>
        <label>Purchasing Requests</label>
    </listViews>
    <listViews>
        <fullName>inscor__RFQ_Requests</fullName>
        <columns>NAME</columns>
        <columns>inscor__Customer_Quote_Line__c</columns>
        <columns>inscor__Sales_Order_Line__c</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Request_Type__c</field>
            <operation>equals</operation>
            <value>RFQ</value>
        </filters>
        <label>RFQ Requests</label>
    </listViews>
    <nameField>
        <displayFormat>RID-{0}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>